--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title>Derek Stowe Alexander's porfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
     <h1>Derek</h1>
+    <div id="bout">
     <section id="About">
         <h2>About</h2>
         <p> I am a Sagittarius, a martial artist spiritual, but I don't have all the answers. I'm just trying to find my
@@ -17,6 +19,7 @@
             is peace in relationships too, as well as happiness. I am a goofball. I'm laid-back. I don't take things too
             seriously I mean I am it counts, but for the most part, not life is too short, so don't stress about it.</p>
     </section>
+    </div>
     <section id="Experience">
         <h2>Experience</h2>
         <ul>
@@ -29,11 +32,14 @@
     </section>
     <section id="Connect">
         <h2>Connect</h2>
+        <div id="links">
+
         <ul>
             <li><a href="www.whatsapp.com">my whats app</a></li>
             <li><a href="https://www.linkedin.com/jobs/">my linkedin</a></li>
         </ul>
     </section>
+    </div>
 </body>
 
 </html>
