--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 <body>
     <h1>Derek</h1>
+    <nav>
+        <section id="Skills">
+        </section>
+        <h2><li><a href="www.whatsapp.com">Skills</a></li><h2
+        <section id="Projects">
+        </section>
+        <h2><li><a href="www.whatsapp.com">Projects</a></li><h2
+        
+    </nav>
     <div id="bout">
     <section id="About">
         <h2>About</h2>
@@ -22,24 +31,43 @@
     </div>
     <section id="Experience">
         <h2>Experience</h2>
-        <ul>
-            <li>Micrsoft word</li>
-            <li>spreadsheet</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>PowerPoint</li>
-        </ul>
+        <div class="experience-section">
+            <div class="experience-item">
+                <div class="job-title">Microsoft Word</div>
+                <div class="job-date">Jan 2003 - Now</div>
+                <div class="job-description">Typing out Documents for things such as email official business letters,.</div>
+            </div>
+            <div class="experience-item">
+                <div class="job-title">Spreadsheet</div>
+                <div class="job-date">aug. 2018 - Dec 2022</div>
+                <div class="job-description">For managing records, making list of guests in hotels, typing out receipts.</div>
+            </div>
+            <div class="experience-item">
+                <div class="job-title">HTML</div>
+                <div class="job-date">sept. 2020 - Now</div>
+                <div class="job-description">The fundamentals of developing webpages.</div>
+            </div>
+            <div class="experience-item">
+                <div class="job-title">CSS</div>
+                <div class="job-date">Jsept. 2020 - Now</div>
+                <div class="job-description">Adding style to the webpage, search as colors, images, sizes of text ECT.</div>
+            </div>
+            <div class="experience-item">
+                <div class="job-title">PowerPoint</div>
+                <div class="job-date">aug. 2006 - pNow</div>
+                <div class="job-description">Creating presentations about a certain subject, whether it's financial records, Data analysis, Marketing strategies, sometimes predictions about how things would turn out in a few years.</div>
+            </div>
+        </div>
     </section>
     <section id="Connect">
         <h2>Connect</h2>
         <div id="links">
-
-        <ul>
-            <li><a href="www.whatsapp.com">my whats app</a></li>
+          <ul>
+            <li><a href="https://www.whatsapp.com">my whatsapp</a></li>
             <li><a href="https://www.linkedin.com/jobs/">my linkedin</a></li>
-        </ul>
-    </section>
-    </div>
+          </ul>
+        </div>
+      </section>
 </body>
 
 </html>
