--- a/index.html
+++ b/index.html
@@ -5,29 +5,33 @@
     <title>Derek Stowe Alexander's porfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
     <h1>Derek</h1>
     <nav>
-        <section id="Skills">
-        </section>
-        <h2><li><a href="www.whatsapp.com">Skills</a></li><h2
-        <section id="Projects">
-        </section>
-        <h2><li><a href="www.whatsapp.com">Projects</a></li><h2
-        
+<ul>
+    <li><a href=#About>About</a></li>
+    <li><a href=#Experience>Experience</a></li>
+    <li><a href=#Skills>Skills</a></li>
+    <li><a href=#Projects>Projects</a></li>
+    <li><a href=#Connect>Connect</a></li>
+</ul>
     </nav>
     <div id="bout">
-    <section id="About">
-        <h2>About</h2>
-        <p> I am a Sagittarius, a martial artist spiritual, but I don't have all the answers. I'm just trying to find my
-            own way. All I do is help other people give them advice about what they do to find peace while trying to
-            find it myself I believe there are different types of peace. There's peace in your own life, but then there
-            is peace in relationships too, as well as happiness. I am a goofball. I'm laid-back. I don't take things too
-            seriously I mean I am it counts, but for the most part, not life is too short, so don't stress about it.</p>
-    </section>
+        <section id="About">
+            <h2>About</h2>
+            <p> I am a Sagittarius, a martial artist spiritual, but I don't have all the answers. I'm just trying to
+                find my
+                own way. All I do is help other people give them advice about what they do to find peace while trying to
+                find it myself I believe there are different types of peace. There's peace in your own life, but then
+                there
+                is peace in relationships too, as well as happiness. I am a goofball. I'm laid-back. I don't take things
+                too
+                seriously I mean I am it counts, but for the most part, not life is too short, so don't stress about it.
+            </p>
+        </section>
     </div>
     <section id="Experience">
         <h2>Experience</h2>
@@ -35,12 +39,14 @@
             <div class="experience-item">
                 <div class="job-title">Microsoft Word</div>
                 <div class="job-date">Jan 2003 - Now</div>
-                <div class="job-description">Typing out Documents for things such as email official business letters,.</div>
+                <div class="job-description">Typing out Documents for things such as email official business letters,.
+                </div>
             </div>
             <div class="experience-item">
                 <div class="job-title">Spreadsheet</div>
                 <div class="job-date">aug. 2018 - Dec 2022</div>
-                <div class="job-description">For managing records, making list of guests in hotels, typing out receipts.</div>
+                <div class="job-description">For managing records, making list of guests in hotels, typing out receipts.
+                </div>
             </div>
             <div class="experience-item">
                 <div class="job-title">HTML</div>
@@ -50,24 +56,33 @@
             <div class="experience-item">
                 <div class="job-title">CSS</div>
                 <div class="job-date">Jsept. 2020 - Now</div>
-                <div class="job-description">Adding style to the webpage, search as colors, images, sizes of text ECT.</div>
+                <div class="job-description">Adding style to the webpage, search as colors, images, sizes of text ECT.
+                </div>
             </div>
             <div class="experience-item">
                 <div class="job-title">PowerPoint</div>
                 <div class="job-date">aug. 2006 - pNow</div>
-                <div class="job-description">Creating presentations about a certain subject, whether it's financial records, Data analysis, Marketing strategies, sometimes predictions about how things would turn out in a few years.</div>
+                <div class="job-description">Creating presentations about a certain subject, whether it's financial
+                    records, Data analysis, Marketing strategies, sometimes predictions about how things would turn out
+                    in a few years.</div>
             </div>
         </div>
+    </section>
+    <section id="Skills">
+        <h2>Skills</h2>
+    </section>
+    <section id="Projects">
+        <h2>Projects</h2>
     </section>
     <section id="Connect">
         <h2>Connect</h2>
         <div id="links">
-          <ul>
-            <li><a href="https://www.whatsapp.com">my whatsapp</a></li>
-            <li><a href="https://www.linkedin.com/jobs/">my linkedin</a></li>
-          </ul>
+            <ul>
+                <li><a href="https://www.whatsapp.com">my whatsapp</a></li>
+                <li><a href="https://www.linkedin.com/jobs/">my linkedin</a></li>
+            </ul>
         </div>
-      </section>
+    </section>
 </body>
 
 </html>
