--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 there
                 is peace in relationships too, as well as happiness. I am a goofball. I'm laid-back. I don't take things
                 too
-                seriously I mean I am it counts, but for the most part, not life is too short, so don't stress about it.
+                seriously I mean I am it counts, but for the most part, not life is too short, so don't stress about it. and i don't need stress
             </p>
         </section>
     </div>
@@ -55,13 +55,13 @@
             </div>
             <div class="experience-item">
                 <div class="job-title">CSS</div>
-                <div class="job-date">Jsept. 2020 - Now</div>
+                <div class="job-date">sept. 2020 - Now</div>
                 <div class="job-description">Adding style to the webpage, search as colors, images, sizes of text ECT.
                 </div>
             </div>
             <div class="experience-item">
                 <div class="job-title">PowerPoint</div>
-                <div class="job-date">aug. 2006 - pNow</div>
+                <div class="job-date">aug. 2006 - Now</div>
                 <div class="job-description">Creating presentations about a certain subject, whether it's financial
                     records, Data analysis, Marketing strategies, sometimes predictions about how things would turn out
                     in a few years.</div>
