--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>git checkout 
+<head> 
     <title>Derek Stowe Alexander's porfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,8 +34,7 @@
         </section>
     </div>
     <section id="Experience">
-        <h2>Experience</h2>
-        <div class="experience-section">
+       <div id="EH"><h2>Experience</h2></div>
             <div class="experience-item">
                 <div class="job-title">Microsoft Word</div>
                 <div class="job-date">Jan 2003 - Now</div>
