--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li><a href=#Skills>Skills</a></li>
     <li><a href=#Projects>Projects</a></li>
     <li><a href=#Connect>Connect</a></li>
+    <li><a href="#leaveMessage">Leave a Message</a></li> 
 </ul>
     </nav>
     <div id="bout">
@@ -87,6 +88,22 @@
         </div>
     </section>
     </div>
+    <section id="leaveMessage">
+        <h2>Leave a Message</h2>
+        <form name="leave_message">
+          <label for="usersName">Name:</label><br>
+          <input type="text" name="usersName" id="usersName" required><br>
+          <label for="usersEmail">Email:</label><br>
+          <input type="email" name="usersEmail" id="usersEmail" required><br>
+          <label for="usersMessage">Message:</label><br>
+          <textarea name="usersMessage" id="usersMessage" required></textarea><br>
+          <button type="submit">Submit</button>
+        </form>
+      </section>
+      <section id="messages">
+        <h2>Messages</h2>
+        <ul></ul>
+      </section>
     <script src="js/index.js"></script>
 
 </body>
