--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
     </section>
     <section id="Projects">
         <h2>Projects</h2>
+        <ul id="project-list">
+            
+        </ul>
     </section>
     <section id="Connect">
         <h2>Connect</h2>
