--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         <h2>Connect</h2>
         <div id="links">
             <ul>
-                <li><a href="">my whatsapp</a></li>
+                <li><a href="amir.stowe95@gmail.com">my email</a></li>
+                <li><a href="http://www.Whatsapp.com">my whatsapp</a></li>
                 <li><a href="https://www.linkedin.com/jobs/">my linkedin</a></li>
             </ul>
         </div>
@@ -99,6 +100,10 @@
         <h2>Messages</h2>
         <ul></ul>
     </section>
+
+    <footer>
+        <p id="copyright"></p>
+    </footer>
 
     <script src="js/index.js"></script>
 
