update project final

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Derek</h1>
+    <h1>Derek Stowe Alexander</h1>
     <nav>
         <ul>
             <li><a href="#About">About</a></li>
@@ -76,9 +76,8 @@
         <h2>Connect</h2>
         <div id="links">
             <ul>
-                <li><a href="amir.stowe95@gmail.com">my email</a></li>
-                <li><a href="http://www.Whatsapp.com">my whatsapp</a></li>
-                <li><a href="https://www.linkedin.com/jobs/">my linkedin</a></li>
+                <li><a href="mailto:amir.stowe95@gmail.com">my email</a></li>                <li><a href="http://www.Whatsapp.com">my whatsapp</a></li>
+                <li><a href="https://www.linkedin.com/in/derek-stowe-alexander-485930179/">my linkedin</a></li>
             </ul>
         </div>
     </section>
@@ -102,9 +101,8 @@
     </section>
 
     <footer>
-        <p id="copyright"></p>
-    </footer>
-
+        <p id="copyright">&copy; Derek 2025. All rights reserved.</p>
+      </footer>
     <script src="js/index.js"></script>
 
 </body>
